--- a/css/carousel.css
+++ b/css/carousel.css
@@ -34,3 +34,41 @@
         transform: translateX(-100%);
     }
 }
+
+  .video-section {
+      position: relative;
+      width: 100%;
+      /* height: auto; */
+      overflow: hidden;
+    }
+
+    .video-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none; /* prevent interaction */
+      z-index: -1;
+    }
+
+    .video-background iframe {
+      width: 100vw;
+      height: 56.25vw; /* 16:9 aspect ratio */
+      min-height: 100vh;
+      min-width: 177.77vh; /* 16:9 aspect ratio */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .video-content {
+      position: relative;
+      z-index: 1;
+      color: white;
+      text-align: center;
+      top: 50%;
+      transform: translateY(-50%);
+      font-family: Arial, sans-serif;
+    }
