--- a/css/new-cards.css
+++ b/css/new-cards.css
@@ -1,3 +1,10 @@
+.audiowide-regular {
+  font-family: "Audiowide", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+ 
  /* ===== CARD SECTION ===== */
     .card-section {
       background: #111;
