--- a/css/carousel.css
+++ b/css/carousel.css
@@ -64,11 +64,11 @@
     }
 
     .video-content {
-      position: relative;
-      z-index: 1;
-      color: white;
+        position: relative;
+      /* z-index: 1; */
+      color: black;
       text-align: center;
-      top: 50%;
+      top: 0;
       transform: translateY(-50%);
-      font-family: Arial, sans-serif;
+      /* font-family: Arial, sans-serif; */
     }
