--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ h2 {
 /* Footer */
 
 .footer {
-	font-size: 1.2em;
+	/* font-size: 1.2em; */
 	color: #000;
 	padding-top: 7rem;
 	padding-bottom: 7rem;
